--- a/style.css
+++ b/style.css
@@ -14,36 +14,38 @@ header{
 .box{
   background-color: #fff;
   position: relative;
-  margin: 20px;
+  top: 20px;
+  left:20px;
+  padding: 0;
 }
 
 .purple-box1{
+  background-color: #a9004b;
   position: absolute;
   margin-left: 180px;
-  background-color: #a9004b;
   width: 40px; height: 40px;
   float: left;
-  padding:20px,20px;
+  padding:10px,0px,10px,0px;
   border: 10px solid #ffffff;
 }
 
 .purple-box2{
+  background-color: #a9004b;
   position: absolute;
   margin-left: 230px;
-  background-color: #a9004b;
   width: 40px;height: 40px;
   float: center;
-  padding:20px,20px;
+  padding:10px,0px,10px,0px;
   border: 10px solid #ffffff;
 }
 
 .purple-box3{
-  position: absolute;
   background-color: #a9004b;
+  position: absolute;
   width: 40px;height: 40px;
   float: light;
   margin-left: 280px;
-  padding:20px,20px;
+  padding:10px,0px,10px,0px;
   border: 10px solid #ffffff;
 }
 
@@ -70,7 +72,6 @@ header{
 
 .beside-left{
   float: left;
-  width: 250px;
   position: absolute;
   top: 0%;
   left: 50%;
@@ -82,9 +83,9 @@ header{
   width: 140px;
   height: 40px;
   background-color: #ff863f;
-  margin-top: 40px;
-  margin-left: 40px;
   border: 5px solid #ffffff;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 
 .orange-box2{
@@ -93,7 +94,7 @@ header{
   background-color: #ff863f;
   border: 5px solid #ffffff;
   margin-top: 20px;
-  margin-left: 40px;
+  margin-bottom: 20px;
 }
 
 .orange-box3{
@@ -102,7 +103,7 @@ header{
   background-color: #ff863f;
   border: 5px solid #ffffff;
   margin-top: 20px;
-  margin-left: 40px;
+  margin-bottom:20px;
 }
 
 .footer{
