--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header{
   background-color: #a9004b;
   position: absolute;
   width: 40px;height: 40px;
-  float: light;
+  float: right;
   margin-left: 280px;
   padding:10px,0px,10px,0px;
   border: 10px solid #ffffff;
