--- a/style.css
+++ b/style.css
@@ -8,51 +8,26 @@ header{
   width: 400px;
   height: 100px;
   background-color: #ff0000;
-  overflow: hidden;
+  position: relative;
 }
 
 .box{
   background-color: #fff;
-  position: relative;
-  top: 20px;
-  left:20px;
-  padding: 0;
-}
-
-.purpul:first-child{
-  margin: 0;
-}
-
-.purple{
   position: absolute;
-  height: 80px;
+  top: 20px;
+  right: 20px;
+  padding: 10px;
 }
 
-.purple-box1{
-  margin-left: 180px;
+.purple-box{
   float: left;
   background-color: #a9004b;
   width: 40px;height: 40px;
-  border: 10px solid #ffffff;
-  padding:10px,0px,10px,0px;
+  margin-right: 10px;
 }
 
-.purple-box2{
-  margin-left: 230px;
-  float: center;
-  background-color: #a9004b;
-  width: 40px;height: 40px;
-  border: 10px solid #ffffff;
-  padding:10px,0px,10px,0px;
-}
-
-.purple-box3{
-  margin-left: 280px;
-  float: right;
-  background-color: #a9004b;
-  width: 40px;height: 40px;
-  border: 10px solid #ffffff;
-  padding:10px,0px,10px,0px;
+.purple-box:last-child{
+  margin-right: 0px;
 }
 
 .clearfix::after{
@@ -94,7 +69,7 @@ header{
   background-color: #ff863f;
   border: 5px solid #ffffff;
   margin-top: 40px;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 
 .orange-box2{
@@ -102,8 +77,8 @@ header{
   height: 40px;
   background-color: #ff863f;
   border: 5px solid #ffffff;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
 
 .orange-box3{
@@ -111,8 +86,8 @@ header{
   height: 40px;
   background-color: #ff863f;
   border: 5px solid #ffffff;
-  margin-top: 20px;
-  margin-bottom:20px;
+  margin-top: 10px;
+  margin-bottom:5px;
 }
 
 .footer{
