--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ header{
 .beside-left{
   float: left;
   position: absolute;
-  margin-left: 40px;
-  padding-top: 40px;
+  top:40px;
+  left:40px;
 }
 
 .orange-box{
